MDEV-31385 Change buffer stale entries leads to corruption while reusing page

buf_page_free(): If buffered changes existed for the page, drop them.

Co-developed with Thirunarayanan Balathandayuthapani